<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100px"
        android:orientation="vertical">

        <EditText
            style="@style/EditTextStyle"
            android:hint="Username..."
            android:id="@+id/usrnm"
            />
        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/nome"
            android:id="@+id/nome"
            />
        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/cognome"
            android:id="@+id/cognome"
            />
        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/numtel"
            android:id="@+id/numtel"
            />
        <Button
            style="@style/ButtonStyle"
            android:textSize="20sp"
            android:text="@string/bottone_registrati"
            android:id="@+id/registrati"/>


    </LinearLayout>

</LinearLayout>
