<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18px"
    android:paddingRight="18px"
    tools:context="Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100px"
        android:orientation="vertical">
        <TextView
            style="@style/TextViewStyle"

            android:text="@string/titolo_login"
            />
        <EditText

            android:layout_marginTop="60dp"
            style="@style/EditTextStyle"
            android:hint="Inserisci username..."
            android:id="@+id/username"
            android:layout_marginBottom="30dp"/>
        <Button

            style="@style/ButtonStyle"
            android:textSize="20sp"
            android:text="@string/bottone_accesso"
            android:id="@+id/accedi"/>

        <Button
            style="@style/ButtonStyle"
            android:textSize="17sp"
            android:text="@string/nuovo_profilo"
            android:id="@+id/crea"
            />


    </LinearLayout>

</LinearLayout>
